Bug Fix: language z-index

--- a/bennu-core/web/CSS/theme_test_beta/styles.css
+++ b/bennu-core/web/CSS/theme_test_beta/styles.css
@@ -365,7 +365,7 @@ a:hover.login-link {
 	width:160px;
 	float:right;
 	position:relative;
-	z-index:3000;
+	z-index:2;
 	margin-right:40px;
 	text-align:right;
 	font-size:12px;
